--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     statusText.textContent = "Sending location...";
 
                     // Use the local server URL here
-                    const url = 'http://localhost:3000/save-location'; 
+                    const url = 'https://anas-test.netlify.app/save-location'; 
 
                     // Send the location data to the server
                     fetch(url, {
